--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -14,6 +14,10 @@ body {
     box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
 }
 
+.react-datepicker-wrapper {
+    width: 100%;
+}
+
 .masthead {
     display: flex;
     align-items: center;
